Bug 992447 - Make <select> have 'overflow-clip-box:padding-box!important' for now since 'content-box' doesn't really work there.  r=roc
UltraBlame original commit: 5cea3e42cb44580003663cc783506fed8325d60b

--- a/layout/style/forms.css
+++ b/layout/style/forms.css
@@ -211,6 +211,7 @@ select {
   
   display: inline-block;
   page-break-inside: avoid;
+  overflow-clip-box: padding-box !important; 
 }
 
 
